--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(gltutorial)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(gltutorial main.cpp Shader.h Camera.h)
-target_link_libraries(gltutorial m glut GLEW GL GLU glfw3 pthread Xi X11 Xxf86vm Xrandr ${CMAKE_DL_LIBS})
+add_executable(gltutorial main.cpp Shader.h Camera.h Mesh.h Model.h)
+target_link_libraries(gltutorial m glut GLEW GL GLU glfw3 pthread Xi X11 Xxf86vm Xrandr assimp ${CMAKE_DL_LIBS})
